--- a/TODO.org
+++ b/TODO.org
@@ -30,7 +30,8 @@
      argument!
    - check highlighting of -license-type
 ** wishes
-   - are the material properties documented, matlib?
+   - are the material properties documented, matlib?  Matlib is used
+     in -template.el, document directory somewhere
    - Check the customisation system
    - online documentation: still ANSYS-mode!
    - Trigger the ANSYS online manual, if there's no local docu for C-c
@@ -58,7 +59,7 @@
    - c*** without argument is not font-locked
    - jit-lock-function errors
    - RESCOMBINE is not fontified
-   - M-? on an empty buffer returns *abbr* help instead of warning
+   - M-? on an empty buffer returns *abbr* help instead of a warning
    - C-c C-j tries to send a next line in the LAST line and after an
      /exit command
    - -send-to-ansys, -send-above copy empty regions or only comments
@@ -275,19 +276,13 @@
 
     The project is hosted on
 
-    https://github.com/dieter-wilhelm/ansys-mode
+    [[https://github.com/dieter-wilhelm/apdl-mode]]
 
     Where you will find the latest development version.
 
     Stable versions and prebuild packages are on the releases page:
 
-    https://github.com/dieter-wilhelm/ansys-mode/releases
-
-    An alternative releases archive is hosted at Google Drive:
-
-    https://drive.google.com/?tab=mo&authuser=0#folders/0Bxnk08BGWfexUThqbWxLX1NyeTg
-
-    If you don't have access to above archives please email me.
+    [[https://github.com/dieter-wilhelm/apdl-mode/releases]]
 
       Dieter
 
@@ -511,9 +506,6 @@
 ** Unknown ANSYS stuff
    - what the heck is the *UILIST command?
    - Is hyper56 a valid element?
-** Additional APDL macro resources
-   see http://www.apdl.de for further ideas and extensions or
-     http://www.padtinc.com/.
 -----
 # The following is for Emacs
 # local variables:
