--- a/NEWS.org
+++ b/NEWS.org
@@ -1,4 +1,4 @@
-#+DATE: Time-stamp: <2020-02-17>
+#+DATE: Time-stamp: <2020-02-18>
 #+bind: org-html-preamble-format (("en" "%d"))
 #+OPTIONS: html-link-use-abs-url:nil html-postamble:t html-preamble:t
 #+OPTIONS: html-scripts:t html-style:t html5-fancy:nil tex:t
@@ -18,9 +18,9 @@
 
 Copyright (C) 2006 - 2020  H. Dieter Wilhelm, GPL V3
 ** Version 20.
-
+   - Renamed apdl-browse-apdl-guide to apdl-browse-ansys-apdl-manual
+   - Improved configuration docu
    - EWW as a help viewer is now working under Windows
-
 ** Version 20.1.0  2020-02
    - Changed the name to APDL-Mode
    - Changed version naming scheme (package.el format)
