--- a/README.org
+++ b/README.org
@@ -1,5 +1,5 @@
 #+STARTUP: all
-#+DATE: Time-stamp: <2020-02-18>
+#+DATE: Time-stamp: <2020-02-19>
 #+bind: org-html-preamble-format (("en" "%d"))
 #+OPTIONS: ':nil *:t -:t ::t <:t H:3 \n:nil ^:t arch:headline
 #+OPTIONS: author:t c:nil creator:comment d:(not "LOGBOOK") date:t
@@ -42,21 +42,30 @@ Copyright (C) 2006 - 2020  H. Dieter Wilhelm, GPL V3
   pin-pointing the APDL reference documentation, keyword completion,
   code templates, dedicated highlighting, solver communication
   (GNU-Linux only), license reporting, etc.  Over the years it has
-  accumulated lots of features for writing and debugging FEA models in
-  APDL code. Please convince yourself with the APDL-Mode in-depth
-  documentation.
+  accumulated lots of features for writing and debugging FEA complete
+  models in APDL code. Please convince yourself with the APDL-Mode
+  in-depth documentation.
 
   With the advent of the modern ANSYS GUIs - like `WorkBench' or
   `AIM' - the usage of APDL as a wholesale modelling language has
-  diminished.  But APDL is here to stay: `WorkBench' and `AIM' operate
-  exclusively the ANSYS solver with it!  They are producing and
-  sending APDL input (.dat) files to the solver.  For a true
-  understanding of the GUIs' inner workings a study of APDL code is
-  prerequisite.
+  diminished for non automated tasks.  But APDL is here to stay:
+  `WorkBench' and `AIM' operate exclusively the ANSYS solver with it!
+  They are producing and sending APDL input (.dat) files to the
+  solver.  For a true understanding of the GUIs' inner workings a
+  study of their APDL code is prerequisite!
 
-  Moreover the GUIs are not supporting all solver features.  So APDL
-  `Command Snippets' are used to enhance the GUIs' modelling
-  capabilities.
+  Moreover the GUIs are not supporting all solver features.  So
+  "Command (APDL)" snippets are used to enhance the GUIs' modelling
+  capabilities.  When you "Export" such a WorkBench command object it
+  becomes associated with a file and thus editable also with a third
+  party editor.
+
+  [[file:doc/connect_command_snippet_to_file.png]]
+
+  When you are now editing the file the "File Status" in Workbench
+  changes and you can pull-in the updated content with the "Refresh"
+  button.
+
 * Some Highlights
   Nowadays I find APDL-Mode mostly useful in writing `Command
   Snippets' and inspecting longer snippets from other sources.
